--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
 form {
   background-color: rgb(100, 100, 249);
   width: 100%;
@@ -7,6 +14,10 @@ form {
   box-sizing: border-box;
   border-radius: 2.5%;
   /* float: left; */
+}
+
+.btn {
+  padding: 3px 25px;
 }
 
 .card {
@@ -21,6 +32,45 @@ form {
   box-shadow: 0 5px 3px rgba(0, 0, 0, 0.3);
 }
 
-.btn {
-  padding: 3px 25px;
+.container {
+  margin: 1rem;
+  text-align: center;
+}
+
+.nav {
+  background-color: #333;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0.25rem;
+}
+
+.nav li.active {
+  background-color: #555;
+}
+
+.nav li:hover {
+  background-color: #777;
+}
+.nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.site-title {
+  font-size: 2rem;
 }
