--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,15 @@ form {
   margin: 0 0;
 }
 .btn {
-  padding: 3px 25px;
-  width: 5rem;
+  padding: 3px 5px;
+  width: 1rem;
+  gap: 5rem 5rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+}
+.cardbtnSpace {
+  display: flex;
+  justify-content: space-between;
 }
 
 .card {
@@ -46,9 +51,14 @@ form {
 }
 
 .collection {
-  margin: none;
-  padding: none;
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+  padding: 5px;
+  border-spacing: 4px;
   text-align: center;
+  width: 1000px;
+  gap: 0.5rem;
 }
 
 .img {
