--- a/src/styles.css
+++ b/src/styles.css
@@ -35,10 +35,8 @@ form {
 
 .card {
   background-color: rgb(164, 152, 152);
-  width: 100%;
+  width: 70%;
   width: 250px;
-  /* float: center; */
-  /* padding: 10px; */
   margin: 1px;
   border-spacing: 4px;
   border-radius: 3%;
@@ -47,17 +45,18 @@ form {
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  padding: 0 1rem;
+  position: relative;
+  padding: 1 1rem;
 }
 
 .collection {
   display: flex;
   justify-content: space-between;
-  margin: 5px;
-  padding: 5px;
+  margin: none;
+  padding: auto;
   border-spacing: 4px;
   text-align: center;
-  width: 1000px;
+  width: auto;
   gap: 0.5rem;
 }
 
